--- a/templates/cams/four_cams.html
+++ b/templates/cams/four_cams.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>single cam</title>
+  <title>eight cams</title>
 </head>
 <body>
   <div class="main">
@@ -95,17 +95,34 @@
   </div>
   <div class="video" 
     style="
-      padding-left: 200px; 
-      padding-right: 200px; 
-      padding-top: 40px; 
       align-items: center; 
       text-align: center;"
     >
-    <video width="1000" height="550" controls class="cam">
-      <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
-      <source src="movie.ogg" type="video/ogg">
-      Your browser does not support the video tag.
-    </video>
+    <div class="video">
+      <video width="520" height="300" controls class="cam">
+        <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video>
+      <video width="520" height="300" controls class="cam">
+        <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <div class="video">
+      <video width="520" height="300" controls class="cam">
+        <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video>
+      <video width="520" height="300" controls class="cam">
+        <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
   </div>
 </body>
