--- a/templates/cams/twenty_cams.html
+++ b/templates/cams/twenty_cams.html
@@ -1,98 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>twenty cams</title>
-</head>
-<body>
-  <div class="main">
-    <nav class="navbar">
-    <span class="open-slide">
-        <a href="#" onclick="openSlideMenu()" style="padding-top:10px;">
-            <svg width="30" height="30">
-                <path d="M0, 5, 30, 5" stroke="#fff"
-                stroke-width="5"
-                />
-                <path d="M0, 14, 30, 14" stroke="#fff"
-                stroke-width="5"
-                />
-                <path d="M0, 23, 30, 23" stroke="#fff"
-                stroke-width="5"
-                />
-            </svg>
-        </a>
-    </span>
-    <ul class="navbar-nav">
-        <li><a href="/">CHMS</a></li>
-        <li><a href="#">Heat </a></li>
-        <li><a href="/cameramanage">Camera Management</a></li>
-        <li><a href="/crowdcount">P C</a></li>
-        <li><a href="uactivity">Unusual Activity</a></li>
-        <li><a href="/linecrossing">Line Crossing</a></li>
-    </ul>
-  </nav>
-  <div id="side-menu" class="side-nav">
-    <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-    <ul class="collapsible dark lighten-1">
-      <li>
-        <div class="collapsible-header">4 Camera View</div>
-        <div class="collapsible-body" style="padding: 0.5rem;">
-          
-          <form action="/camsd4" method="POST" class="row" id="camselect4">
-            <div class="row">
-              {% for cam in data %}
-                  <p class="col s4">
-                    <label>
-                      <input type="checkbox" name="{{cam['camera_name']}}"  />
-                      <span style="padding-left: 22px;">{{cam['camera_name']}}</span>
-                    </label>
-                  </p>
-                  {% endfor %}
-            </div>
-            {% if data %}
-            <p class="center-align">
-              <button class="btn-small waves-effect waves-light" id="submit-btn" type="submit">Submit
-              </button>
-            </p>
-            {% endif %}
-          </form>
-        </div>
-      </li>
-      <li>
-        <div class="collapsible-header">8 Camera View</div>
-        <div class="collapsible-body">
-          <form action="/camsd8" method="POST" class="row" id="camselect8">
-            <div class="row">
-              {% for cam in data %}
-                  <p class="col s4">
-                    <label>
-                      <input type="checkbox" name="{{cam['camera_name']}}"  />
-                      <span style="padding-left: 22px;">{{cam['camera_name']}}</span>
-                    </label>
-                  </p>
-                  {% endfor %}
-                </div>
-                  {% if data %}
-                <p class="center-align">
-                <button class="btn waves-effect waves-light" id="submit-btn8" type="submit">Submit
-                </button>
-              </p>
-            {% endif %}
+{% extends 'dashboard/layout.html' %}
 
-          </form>
-        </div>
-      </li>
-      <li>
-        <div class="collapsible-header">Single Camera View</div>
-        <div class="collapsible-body">
-          <ul>
-            {% for d in data %}
-            <li><a href="/{{cam_type}}/{{d['camera_name']}}">{{d['camera_name']}}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </div>
+{% block content %} 
+
   <div class="video" 
     style="
       padding-left: 10px; 
@@ -214,7 +123,8 @@
     </div>
   </div>
   </div>
-</body>
-</html>
+
+  {% endblock content %}
+
 
 
