--- a/templates/nav.html
+++ b/templates/nav.html
@@ -93,19 +93,27 @@
       </li>
     </ul>
   </div>
-  <div class="video" 
+  <div class="main" 
     style="
-      padding-left: 200px; 
-      padding-right: 200px; 
-      padding-top: 40px; 
-      align-items: center; 
-      text-align: center;"
-    >
-    <video width="1000" height="550" controls class="cam">
-      <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
-      <source src="movie.ogg" type="video/ogg">
-      Your browser does not support the video tag.
-    </video>
+      align-items: center;
+      text-align: center;
+    "   
+  >
+    <p style="
+      padding-top: 10px;
+      font-weight:bold">Cam 1</p>
+    <div class="video" 
+      style="
+        padding-left: 200px; 
+        padding-right: 200px; 
+        padding-top: 10px;" 
+      >
+      <video width="950" height="530" controls class="cam">
+        <source src="https://www.youtube.com/watch?v=TSrfB7JIzxY" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video>
+  </div>
   </div>
   </div>
 </body>
