--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+<!--<canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>-->
 
 <h2><span><img src="{{ url_for('static', filename='icons/bell.svg') }}" width="40" alt=""></span>&nbsp;Current Messages</h2>
 <div class="table-responsive">
