header notification page

--- a/templates/dashboard/notifications/index.html
+++ b/templates/dashboard/notifications/index.html
@@ -15,10 +15,10 @@
         <div class="col-md-12">
             <table class="table table-hover table">
                 <thead>
-                    <th>#</th>
-                    <th>Title</th>
-                    <th>Message</th>
-                    <th>Image Url</th>
+                    <th>S.No.</th>
+                    <th>Camera Namee</th>
+                    <th>Violation Type</th>
+                    <th>Violation Evidence</th>
                     <!-- <th>Actions</th> -->
                 </thead>
                 <tbody>
