--- a/templates/dashboard/cam/create.html
+++ b/templates/dashboard/cam/create.html
@@ -18,7 +18,12 @@
             <input type="text" name="channel" id="InputChannel" class="form-control my-2" placeholder="Channel">
             <input type="text" name="uid" id="InputUserid" class="form-control my-2" placeholder="User ID">
             <input type="password" name="password" id="InputPassword" placeholder="password" class="form-control my-2">
-            <input type="text" name="activity" id="InputActivity" class="form-control my-2" placeholder="Activity">
+            <select name="activity" id="InputActivity" class="form-control my-2">
+                <option value = "socialDist">Social Distancing</option>
+                <option value = "faceMask">Face Mask</option>
+                <option value = "Both">Both</option>
+            </select>
+            <!--<input type="text" name="activity" id="InputActivity" class="form-control my-2" placeholder="Activity">-->
             <button type="submit" class="btn btn-info offset-md-5" >Confirm</button>
         </form>
     </div>
