--- a/templates/dashboard/cam/live.html
+++ b/templates/dashboard/cam/live.html
@@ -9,6 +9,51 @@
       </div>
     </div>
   </div>
+  <div>
+    <form>
+    <div class="pricing-levels-3">
+      <p><strong>Select the number of Cameras:</strong></p>
+      <form>
+        <select name="camera" id="camNumber" class="form-control my-2">
+                  <option id="camNum" value = "1">One</option>
+                  <option id="camNum" value = "4">Four</option>
+                  <option id="camNum" value = "8">Eight</option>
+                  <option id="camNum" value = "20">Twenty</option>
+              </select>
+      </form>
+      <br>
+      <div class="row">
+        <div class="column">
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 1<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 2<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 3<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 4<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 5<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 6<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 7<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 8<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 9<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 10<br> 
+        </div>
+        <div class="column">
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 11<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 12<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 13<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 14<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 15<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 16<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 17<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 18<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 19<br>
+          <input class="single-checkbox" type="checkbox" name="vehicle" value="Bike">Cam 20<br>
+        </div>
+      </div>
+      
+      
+    </div>
+  </form> 
+  
+  </div>
   <span>
     {% if err %}
     <p class="alert-danger">{{err}}</p>
