--- a/templates/dashboard/cam/live.html
+++ b/templates/dashboard/cam/live.html
@@ -14,7 +14,7 @@
           if (cnt > maxAllowed) 
           {
              $(this).prop("checked", "");
-             alert('Select maximum ' + maxAllowed + ' Levels!');
+             alert('Select maximum ' + maxAllowed + ' Cameras!');
          }
       });
     });
