--- a/templates/dashboard/cam/live.html
+++ b/templates/dashboard/cam/live.html
@@ -8,7 +8,7 @@
 </script>
 <script type="text/javascript">
     $(document).ready(function () {
-       $("input[name='vehicle']").change(function () {
+       $("input[name='cam']").change(function () {
           var maxAllowed = $("#camNumber").val();
           var cnt = $("input[name='cam']:checked").length;
           if (cnt > maxAllowed) 
